[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Piece.gd" type="Script" id=2]
[ext_resource path="res://Models/default_piece.obj" type="ArrayMesh" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 0.906216
height = 0.458743

[node name="Piece" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.85, 0, 0, 0, 0.85, 0, 0, 0, 0.85, 0, 0.3, 0 )
cast_shadow = 0
mesh = ExtResource( 3 )
material/0 = null

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
visible = false
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="SoundFXPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
